Fix cards alignment and spacing

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_vars';
 
 .card {
-  margin: 0 $gutter;
+  margin: 0 $gutter/2;
   width: 100%;
   &__wrapper {
     position: relative;
